--- a/index.html
+++ b/index.html
@@ -230,7 +230,10 @@
 
             <!-- History Section -->
             <section id="historySection" class="content-section" role="region" aria-label="Workout History">
-                <div id="historyContent" class="history-container"></div>
+                <div class="history-layout">
+                    <div id="historyContent" class="history-container"></div>
+                    <aside id="weeklyOverview" class="weekly-overview"></aside>
+                </div>
             </section>
 
             <!-- Statistics Section -->
