--- a/index.html
+++ b/index.html
@@ -155,10 +155,10 @@
                                 <option value="back">Back</option>
                                 <option value="shoulders">Shoulders</option>
                                 <option value="legs">Legs</option>
-                                <option value="arms">Arms</option>
+                                <option value="biceps">Biceps</option>
+                                <option value="triceps">Triceps</option>
                                 <option value="core">Core</option>
                                 <option value="neck">Neck</option>
-                                <option value="full-body">Full Body</option>
                             </select>
                         </div>
 
