--- a/index.html
+++ b/index.html
@@ -315,6 +315,16 @@
 
                         <!-- Weekly Panel -->
                         <div class="stats-period-panel" id="statsPanelWeekly">
+                            <!-- Week navigation bar -->
+                            <div class="week-nav-bar" id="weekNavBar">
+                                <button class="week-nav-btn" id="weekNavPrev" title="Previous week">
+                                    <i data-lucide="chevron-left"></i>
+                                </button>
+                                <span class="week-nav-label" id="weekNavLabel">Current Week</span>
+                                <button class="week-nav-btn" id="weekNavNext" title="Next week" disabled>
+                                    <i data-lucide="chevron-right"></i>
+                                </button>
+                            </div>
                             <!-- Muscle Training Sessions (Week) injected by JS -->
                             <div id="muscleSessionsWeek"></div>
 
