--- a/index.html
+++ b/index.html
@@ -340,6 +340,16 @@
 
                         <!-- Monthly Panel -->
                         <div class="stats-period-panel inactive" id="statsPanelMonthly">
+                            <!-- Month navigation bar -->
+                            <div class="week-nav-bar" id="monthNavBar">
+                                <button class="week-nav-btn" id="monthNavPrev" title="Previous month">
+                                    <i data-lucide="chevron-left"></i>
+                                </button>
+                                <span class="week-nav-label" id="monthNavLabel">Current Month</span>
+                                <button class="week-nav-btn" id="monthNavNext" title="Next month" disabled>
+                                    <i data-lucide="chevron-right"></i>
+                                </button>
+                            </div>
                             <!-- Muscle Training Sessions (Month) injected by JS -->
                             <div id="muscleSessionsMonth"></div>
 
